--- a/404.html
+++ b/404.html
@@ -101,7 +101,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "url": "hhttps:\/\/mattipaivike.github.io\/rebelautomation",
+      "url": "https:\/\/mattipaivike.github.io\/rebelautomation.github.io\/",
       "inLanguage": "en",
       "name": "RebelAutomation",
       "description": "",
@@ -114,7 +114,7 @@
 
 
 
-<link rel="stylesheet" href="#ZgotmplZ" integrity="sha256-v67D3cAPd4KJXvtmOHvbRBajzduziVVZd3HeO3MHwO8=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://mattipaivike.github.io/rebelautomation.github.io/css/main.min.bfaec3ddc00f7782895efb66387bdb4416a3cddbb38955597771de3b7307c0ef.css" integrity="sha256-v67D3cAPd4KJXvtmOHvbRBajzduziVVZd3HeO3MHwO8=" crossorigin="anonymous">
 
 
 
@@ -129,16 +129,16 @@
   
 
   
-  <link rel="stylesheet" href="#ZgotmplZ" integrity="sha256-m6zYW28dQilsVtO4RX0ME6Tn9BXEyl/Ir/tu1rOcrXI=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://mattipaivike.github.io/rebelautomation.github.io/css/noscript.min.9bacd85b6f1d42296c56d3b8457d0c13a4e7f415c4ca5fc8affb6ed6b39cad72.css" integrity="sha256-m6zYW28dQilsVtO4RX0ME6Tn9BXEyl/Ir/tu1rOcrXI=" crossorigin="anonymous">
 
 </noscript>
 
 
 
-<link rel="preload" href="/rebelautomation/fonts/open-sans-v17-latin-700.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/rebelautomation/fonts/open-sans-v17-latin-italic.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/rebelautomation/fonts/open-sans-v17-latin-regular.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/rebelautomation/fonts/oswald-v29-latin-700.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/rebelautomation.github.io/fonts/open-sans-v17-latin-700.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/rebelautomation.github.io/fonts/open-sans-v17-latin-italic.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/rebelautomation.github.io/fonts/open-sans-v17-latin-regular.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/rebelautomation.github.io/fonts/oswald-v29-latin-700.woff2" as="font" crossorigin="anonymous">
 
 
 
@@ -150,7 +150,7 @@
 
 
 
-<script src="#ZgotmplZ" integrity="sha256-3XjukeitFtlXCt7&#43;D7QTUSP3Oh/nxEsEdxrSOQmJPQA=" crossorigin="anonymous"></script>
+<script src="https://mattipaivike.github.io/rebelautomation.github.io/js/main.min.dd78ee91e8ad16d9570adefe0fb4135123f73a1fe7c44b04771ad23909893d00.js" integrity="sha256-3XjukeitFtlXCt7&#43;D7QTUSP3Oh/nxEsEdxrSOQmJPQA=" crossorigin="anonymous"></script>
 
   </head>
 
@@ -159,7 +159,7 @@
     <header>
       
 
-  <a href="/rebelautomation">RebelAutomation</a>
+  <a href="/rebelautomation.github.io">RebelAutomation</a>
 
 
 
