--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@ I created this blog as a way to document my work and hopefully give something ba
 
     <title>
         
-            About me :: RebelAutomation 
+            About me :: RebelAutomated 
         
     </title>
 
