--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            404 Page not found :: RebelAutomation 
+            404 Page not found :: RebelAutomated 
         
     </title>
 
@@ -33,10 +33,10 @@
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="RebelAutomation">
+<meta itemprop="description" content="RebelAutomated">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="RebelAutomation"/>
+<meta name="twitter:description" content="RebelAutomated"/>
 
 
 
