--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="homepage, blog" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="https://mattipaivike.github.io/" />
+<link rel="canonical" href="https://rebelautomated.com/" />
 
 
     <title>
@@ -48,7 +48,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="https://mattipaivike.github.io/index.xml" title="RebelAutomated" />
+<link rel="alternate" type="application/rss+xml" href="https://rebelautomated.com/index.xml" title="RebelAutomated" />
 
 
 
